[package]
name = "abuelo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
warp = "0.3"
sha2 = "0.10.8"
ring = "0.17.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
