[package]
name = "abuelo-rocket"
version = "0.1.0"
edition = "2021"
authors = ["AbleOS Team"]
description = "Open source profile service for the AbleOS ecosystem"

[lib]
name = "abuelo"
path = "src/lib.rs"

[[bin]]
name = "abuelo"
path = "src/main.rs"

[dependencies]
log = "0.4.26"
rocket = { version = "0.5", features = ["json"] }
sha2 = "0.10.8"
ring = "0.17.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

#

[dependencies.totp-rs]
version = "5.6.0"
features = []
